assets/gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.istio.io/service-type: NodePort
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: istio-gateway
  name: istio-gateway-istio
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
  - appProtocol: tcp
    name: status-port
    nodePort: 31381
    port: 15021
    protocol: TCP
    targetPort: 15021
  - appProtocol: tcp
    name: policy-server
    nodePort: 32212
    port: 4003
    protocol: TCP
    targetPort: 4003
  - appProtocol: tcp
    name: service-discovery-controller
    nodePort: 32213
    port: 8054
    protocol: TCP
    targetPort: 8054
  - appProtocol: http
    name: http
    nodePort: 31080
    port: 80
    protocol: TCP
    targetPort: 80
  - appProtocol: https
    name: https
    nodePort: 31443
    port: 443
    protocol: TCP
    targetPort: 443
  - appProtocol: tcp
    name: log-cache-api
    nodePort: 31880
    port: 8080
    protocol: TCP
    targetPort: 8080
  - appProtocol: tcp
    name: log-cache-syslog
    nodePort: 31882
    port: 8082
    protocol: TCP
    targetPort: 8082
  - appProtocol: tcp
    name: doppler
    nodePort: 31883
    port: 8083
    protocol: TCP
    targetPort: 8083
  - appProtocol: tcp
    name: ssh-proxy
    nodePort: 31222
    port: 2222
    protocol: TCP
    targetPort: 2222
  - appProtocol: tcp
    name: syslog-binding-cache
    nodePort: 31914
    port: 9000
    protocol: TCP
    targetPort: 9000
  - appProtocol: tcp
    name: tcp-route-1
    nodePort: 32000
    port: 32000
    protocol: TCP
    targetPort: 32000
  - appProtocol: tcp
    name: tcp-route-2
    nodePort: 32001
    port: 32001
    protocol: TCP
    targetPort: 32001
  - appProtocol: tcp
    name: tcp-route-3
    nodePort: 32002
    port: 32002
    protocol: TCP
    targetPort: 32002
  - appProtocol: tcp
    name: tcp-route-4
    nodePort: 32003
    port: 32003
    protocol: TCP
    targetPort: 32003
  - appProtocol: tcp
    name: tcp-route-5
    nodePort: 32004
    port: 32004
    protocol: TCP
    targetPort: 32004
  - appProtocol: tcp
    name: tcp-route-6
    nodePort: 32005
    port: 32005
    protocol: TCP
    targetPort: 32005
  - appProtocol: tcp
    name: tcp-route-7
    nodePort: 32006
    port: 32006
    protocol: TCP
    targetPort: 32006
  - appProtocol: tcp
    name: tcp-route-8
    nodePort: 32007
    port: 32007
    protocol: TCP
    targetPort: 32007
  - appProtocol: tcp
    name: tcp-route-9
    nodePort: 32008
    port: 32008
    protocol: TCP
    targetPort: 32008
  - appProtocol: tcp
    name: tcp-route-10
    nodePort: 32009
    port: 32009
    protocol: TCP
    targetPort: 32009
  - appProtocol: tcp
    name: tcp-route-11
    nodePort: 32010
    port: 32010
    protocol: TCP
    targetPort: 32010
  - appProtocol: tcp
    name: tcp-route-12
    nodePort: 32011
    port: 32011
    protocol: TCP
    targetPort: 32011
  - appProtocol: tcp
    name: tcp-route-13
    nodePort: 32012
    port: 32012
    protocol: TCP
    targetPort: 32012
  - appProtocol: tcp
    name: tcp-route-14
    nodePort: 32013
    port: 32013
    protocol: TCP
    targetPort: 32013
  - appProtocol: tcp
    name: tcp-route-15
    nodePort: 32014
    port: 32014
    protocol: TCP
    targetPort: 32014
  - appProtocol: tcp
    name: tcp-route-16
    nodePort: 32015
    port: 32015
    protocol: TCP
    targetPort: 32015
  - appProtocol: tcp
    name: tcp-route-17
    nodePort: 32016
    port: 32016
    protocol: TCP
    targetPort: 32016
  - appProtocol: tcp
    name: tcp-route-18
    nodePort: 32017
    port: 32017
    protocol: TCP
    targetPort: 32017
  - appProtocol: tcp
    name: tcp-route-19
    nodePort: 32018
    port: 32018
    protocol: TCP
    targetPort: 32018
  - appProtocol: tcp
    name: tcp-route-20
    nodePort: 32019
    port: 32019
    protocol: TCP
    targetPort: 32019
  selector:
    gateway.networking.k8s.io/gateway-name: istio-gateway
  type: NodePort
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: kind-settings
  namespace: default
spec:
  configPatches:
  - applyTo: CLUSTER
    match:
      cluster:
        name: outbound|443||gorouter.default.svc.cluster.local
      context: GATEWAY
    patch:
      operation: MERGE
      value:
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options:
                max_inbound_window_update_frames_per_data_frame_sent: 20
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: istio-gateway
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  annotations:
    networking.istio.io/service-type: NodePort
  name: istio-gateway
  namespace: default
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.127-0-0-1.nip.io'
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.127-0-0-1.nip.io'
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: all-in-one-tls
      mode: Terminate
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: log-cache-api
    port: 8080
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: log-cache-syslog
    port: 8082
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: doppler
    port: 8083
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: ssh-proxy
    port: 2222
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: syslog-binding-cache
    port: 9000
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-1
    port: 32000
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-2
    port: 32001
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-3
    port: 32002
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-4
    port: 32003
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-5
    port: 32004
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-6
    port: 32005
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-7
    port: 32006
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-8
    port: 32007
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-9
    port: 32008
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-10
    port: 32009
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-11
    port: 32010
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-12
    port: 32011
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-13
    port: 32012
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-14
    port: 32013
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-15
    port: 32014
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-16
    port: 32015
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-17
    port: 32016
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-18
    port: 32017
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-19
    port: 32018
    protocol: TCP
  - allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      namespaces:
        from: All
    name: tcp-route-20
    port: 32019
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blobstore
spec:
  parentRefs:
    - name: istio-gateway
  hostnames:
    - blobstore.127-0-0-1.nip.io
    - "*.blobstore.127-0-0-1.nip.io"
  rules:
    - backendRefs:
        - name: minio
          port: 9000
